--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="canvas-container">
         <canvas id="canvas-next"></canvas>
     </div>
-    <script src="/scripts/main.js" type="module"></script>
+    <script src="./scripts/main.js" type="module"></script>
 </body>
+
 </html>
